--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -5,12 +5,12 @@
 			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" /></a></div>
 		</div>
 		
-		<ul class="nav navbar-nav navbar-right">
+		<ul class="nav navbar-nav">
 			<li ng-show="!authentication.user">
 				<li><a href ui-sref="projects">HOME</a>
 			</li>
 			<li ng-show="authentication.user">
-				<a href ui-sref="activities">MY DASHBOARD</a></li>
+				<a href ui-sref="activities">DASHBOARD</a></li>
 			</li>
 			<li class="dropdown" ng-if="systemMenu.shouldRender(authentication.user);">
 				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="System Configuration">
@@ -27,7 +27,7 @@
 						<a x-modal-project-import href x-project="import">Import</a>
 					</li>
 				</ul>
-			</li>>
+			</li>
 			<li>
 				<div class="vert-pipe"></div>
 			</li>
