--- a/modules/organizations/client/views/organization-user-edit.html
+++ b/modules/organizations/client/views/organization-user-edit.html
@@ -20,7 +20,7 @@
 						<label for="salutation" class="control-label">Salutation</label>
 						<select class="form-control" ng-model="user.salutation" ng-options="sal as sal for sal in salutations"></select>
 					</div>
-				</div>    
+				</div>
 				<div class="col-sm-3">
 					<div class="form-group" x-show-errors>
 						<label for="firstName" class="control-label">First Name</label>
@@ -53,7 +53,7 @@
 						<label for="displayName" class="control-label">Full Name</label>
 						<input id="displayName" disabled=true type="text" class="form-control input-sm" ng-model="user.displayName">
 					</div>
-				</div>  
+				</div>
 				<div class="col-sm-3">
 					<div class="form-group" x-show-errors>
 						<label for="username" class="control-label">Username</label>
@@ -70,7 +70,7 @@
 						<label for="phoneNumber" class="control-label">Phone Number</label>
 						<input id="phoneNumber" type="text" class="form-control input-sm" ng-model="user.phoneNumber">
 					</div>
-				</div>    
+				</div>
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="faxNumber" class="control-label">Fax Number</label>
@@ -102,7 +102,7 @@
 						<label for="address1" class="control-label">Address (Line 1)</label>
 						<input id="address1" type="text" class="form-control input-sm" ng-model="user.address1">
 					</div>
-				</div>    
+				</div>
 				<div class="col-sm-6">
 					<div class="form-group">
 						<label for="address2" class="control-label">Address (Line 2)</label>
@@ -117,7 +117,7 @@
 						<label for="city" class="control-label">City</label>
 						<input id="city" type="text" class="form-control input-sm" ng-model="user.city">
 					</div>
-				</div>    
+				</div>
 				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="province" class="control-label">Province</label>
@@ -146,7 +146,7 @@
 						<label for="orgName" class="control-label">Organization</label>
 						<select class="form-control" ng-model="user.org" ng-options="org._id as org.name for org in orgs"></select>
 					</div>
-				</div>    
+				</div>
 				<div class="col-sm-4">
 					<div class="form-group">
 						<label for="department" class="control-label">Department</label>
@@ -172,13 +172,6 @@
 				</div>
 
 				<div class="col-sm-3">
-					<label for="complaint" class="control-label">Roles</label>
-					<select-array x-source-array="roles" x-selected-array='user.roles' x-key-string="code" x-value-string="code"></select-array>
-
-				</div>
-
-
-				<div class="col-sm-3">
 					<div class="form-group">
 						<label for="notes" class="control-label">Contact Preferences</label>
 						<div class="checkbox">
@@ -190,17 +183,15 @@
 							<label>
 								<input id="viaMail" name="viaMail" type="checkbox" ng-model="user.viaMail"> via Mail
 							</label>
-						</div>						
-					</div>
-					<div class="form-group">
-						<label for="notes" class="control-label">Signup Invitation</label>
-						<div class="checkbox">
-							<label>
-								<input id="sendInvitation" name="sendInvitation" type="checkbox" ng-model="sendInvitation"> Send Invitation / Password Reset on Save
-							</label>
 						</div>
-					</div>					
+					</div>
 				</div>
+
+        <div class="col-sm-3" ng-show="roles.length > 0">
+          <label for="complaint" class="control-label">Roles</label>
+          <select-array x-source-array="roles" x-selected-array='user.roles' x-key-string="code" x-value-string="code"></select-array>
+
+        </div>
 
 			</div>
 
