--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -15,13 +15,21 @@
 			<div class="col-sm-9">
 				<div class="form-group">
 					<label for="title" class="control-label">Valued Component Name</label>
-					<input id="title" type="text" class="form-control input-sm" ng-model="vc.name">
+					<input id="title" type="text" class="form-control input-sm" ng-model="vc.name" disabled="disabled">
 				</div>
 			</div>
 			<div class="col-sm-3">
 				<div class="form-group">
 					<label for="sector" class="control-label">Project Sector</label>
 					<select id="sector" ng-model='d.vc.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-9">
+				<div class="form-group">
+					<label for="title" class="control-label">Valued Component Title</label>
+					<input id="title" type="text" class="form-control input-sm" ng-model="vc.title">
 				</div>
 			</div>
 		</div>
@@ -45,10 +53,14 @@
 			<div class="col-sm-6">
 				<div class="form-group">
 					<label for="pillar" class="control-label">Pillar</label>
-					<select ng-change="d.selectTopic(pillar)" id="pillar" ng-model='d.vc.pillar' class="form-control input-sm" ng-options="pillar as pillar for pillar in d.pillars"></select>
+					<select ng-change="d.selectTopic(pillar)" id="pillar"
+					        ng-model='d.vc.pillar'
+							ng-options="pillar as pillar for pillar in d.pillars"
+							class="form-control input-sm">
+					</select>
 				</div>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-6 hidden">
 				<div class="form-group">
 					<label for="stage" class="control-label">Project Stage</label>
 					<select id="stage" ng-model='d.vc.stage' class="form-control input-sm" ng-options="stage as stage for stage in d.stages"></select>
