Change Edit Profile to be a modal form.  Create new directive and controller to pop it up, all fields for User except for roles and Organization data.

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,10 +1,10 @@
 <div class="app-header">
 	<nav class="navbar">
-		
+
 		<div class="navbar-header">
 			<div class="navbar-brand"><a ui-sref="projects" href><img src="{{logo}}" /></a></div>
 		</div>
-		
+
 		<ul class="nav navbar-nav">
 			<li ng-show="!authentication.user">
 				<li><a href ui-sref="projects">HOME</a>
@@ -40,12 +40,13 @@
 					<span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu pull-right" aria-labelledby="userMenu">
-					<li><a href ui-sref="settings.profile">Edit Profile</a></li>
-					<li><a href="/api/auth/signout" target="_self">Logout</a></li>
-				</ul>	
+          <li><a x-modal-edit-my-profile href>Edit Profile</a></li>
+
+          <li><a href="/api/auth/signout" target="_self">Logout</a></li>
+				</ul>
 			</li>
 		</ul>
-		
-		
+
+
 	</nav>
 </div>
