--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1494,7 +1494,6 @@ h2.page-title {
 }
 
 /*------------------------------*/
-
 .activity-list-med {
 	height: 542px;
 	overflow: hidden;
@@ -1540,14 +1539,20 @@ div.dropdown-menu {
 	}
 }
 
+
 /* BUTTONS
 ------------------------------ */
 .btn {
+	.glyphicon {
+		font-size: 1.4rem;
+		vertical-align: middle;
+		margin-top: -4px;
+	}
+	
     .glyphicon + span {
         margin-left: 0.5rem;
     }
 }
-
 
 
 /* PAGE LAYOUT
@@ -1693,6 +1698,23 @@ section {
 }
 
 
+/* MODAL OVERRIDES
+------------------------------ */ 
+.modal-header,
+.modal-body,
+.modal-footer {
+	padding: 1rem 2rem;
+}
+
+.modal-footer {
+	padding: 1.5rem 2rem;
+	
+	.btn {
+		min-width: 8rem;
+	}
+}
+
+
 /* PANEL OVERRIDES 
 ------------------------------ */ 
 .panel-default {
@@ -1799,6 +1821,7 @@ tmpl-header {
 	padding-top: 6rem;
 	padding-bottom: 4rem;
 }
+
 
 /* HEADER 
 ------------------------------ */
