--- a/modules/users/client/views/settings/modal-edit-profile.client.view.html
+++ b/modules/users/client/views/settings/modal-edit-profile.client.view.html
@@ -3,9 +3,7 @@
 </div>
 
 <form name="userForm" ng-submit="save(userForm.$valid)" novalidate>
-
-  <div class="panel panel-default">
-    <div class="panel-body">
+    <div class="modal-body">
 
       <div class="row">
         <div class="col-sm-3">
@@ -87,9 +85,9 @@
         </div>
       </div>
 
-      <hr/>
+      <hr>
 
-
+      <!-- BEGIN: ADDRESS FIELDS -->
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group">
@@ -104,7 +102,6 @@
           </div>
         </div>
       </div>
-
       <div class="row">
         <div class="col-sm-3">
           <div class="form-group">
@@ -131,9 +128,11 @@
           </div>
         </div>
       </div>
-      <hr>
+      <!-- END: ADDRESS FIELDS -->
 
       <hr>
+      
+      <!-- BEGIN: NOTES -->
       <div class="row">
         <div class="col-sm-9">
           <div class="form-group">
@@ -141,9 +140,10 @@
             <textarea id="notes" rows="6" class="form-control" ng-model="myProfile.user.notes"></textarea>
           </div>
         </div>
+      </div>
+      <!-- END: NOTES -->
 
-  </div> <!-- /panelbody -->
-
+    </div>
 </form>
 
 <div class="modal-footer">
