--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -1,41 +1,49 @@
-<div class="row" ng-if="!s.public">
-	<div class="col-sm-6 col-sm-offset-6 text-right form-inline">
-		<div class="form-group">
-			<show-filter x-toggle-filter="toggleFilter"></show-filter>
-		</div>
-		<div class="dropdown form-group" ng-if="!s.public">
-			<div class="input-group input-sm" data-toggle="dropdown">
-				<input class="entryInput form-control input-sm" id="query" name="query" type="text" placeholder="select an artifact type" ng-model="s.addtype.name"></input>
-				<span class="input-group-btn">
-					<button ng-disabled="!s.addtype" ng-click="$event.stopPropagation();s.addType()" class="btn btn-default btn-sm btn-primary" type="button">Add</button>
-				</span>
+<div class="artifact-list-view">
+
+	<div ng-if="!s.public">
+		<div class="button-bar clearfix">
+			<div class="dropdown pull-left" ng-if="!s.public">
+				<div class="input-group" data-toggle="dropdown">
+					<input class="entryInput form-control" id="query" name="query" type="text" placeholder="Select an Artifact Type" ng-model="s.addtype.name"></input>
+					<span class="input-group-btn">
+						<button ng-disabled="!s.addtype" ng-click="$event.stopPropagation();s.addType()" class="btn btn-default" type="button">Add</button>
+					</span>
+				</div>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="query">
+					<li ng-repeat="type in s.availableTypes">
+						<a ng-click="s.selectType(type)">{{type.name}}</a>
+					</li>
+				</ul>
 			</div>
-			<ul class="dropdown-menu" role="menu" aria-labelledby="query">
-				<li class="clickable" ng-click="s.selectType(type)" ng-repeat="type in s.availableTypes"> &nbsp; {{type.name}}</li>
-			</ul>
+			
+			<div class="pull-right">
+				<show-filter x-toggle-filter="toggleFilter"></show-filter>
+			</div>
+			
 		</div>
 	</div>
-</div>
 
-<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
-	<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
-		<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
-		<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
-		<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
-		<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
-		<td class="actions-col">
-			<span ng-if="o.userPermissions.write"> <!-- && !o.isPublished"> -->
-				<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
-					<i class="glyphicon glyphicon-pencil"></i>
-				</a>
-			</span>
-		</td>
-	</tr>
-	<tr ng-if="!$data || $data.length === 0">
-		<td colspan="5">
-			<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
-			<span ng-if="s.public">There are no artifacts available at this time.</span>
-		</td>
-	</tr>
-</table>
+	<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
+		<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
+			<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
+			<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
+			<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
+			<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
+			<td class="actions-col">
+				<span ng-if="o.userPermissions.write"> <!-- && !o.isPublished"> -->
+					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
+						<i class="glyphicon glyphicon-pencil"></i>
+					</a>
+				</span>
+			</td>
+		</tr>
+		<tr ng-if="!$data || $data.length === 0">
+			<td colspan="5">
+				<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
+				<span ng-if="s.public">There are no artifacts available at this time.</span>
+			</td>
+		</tr>
+	</table>
+
+</div>
 
