Add type, hide sector, extra checking on empty result

--- a/modules/vcs/client/views/vc-view.html
+++ b/modules/vcs/client/views/vc-view.html
@@ -6,13 +6,13 @@
 
 	<div class="view-body-container">
 		<div class="row">
-			<div class="col-sm-9">
+			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="title" class="control-label">Valued Component Name</label>
 					<div id="title" type="text">{{vc.name}}</div>
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 hidden">
 				<div class="form-group">
 					<label for="sector" class="control-label">Project Sector</label>
 					<div id="title" type="text">{{vc.sector}}</div>
