--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -12,13 +12,13 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-9">
+			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="title" class="control-label">Valued Component Name</label>
 					<input id="title" type="text" class="form-control input-sm" ng-model="vc.name" disabled="disabled">
 				</div>
 			</div>
-			<div class="col-sm-3">
+			<div class="col-sm-3 hidden">
 				<div class="form-group">
 					<label for="sector" class="control-label">Project Sector</label>
 					<select id="sector" ng-model='d.vc.sector' class="form-control input-sm" ng-options="sector as sector for sector in d.sectors"></select>
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-9">
+			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="title" class="control-label">Valued Component Title</label>
 					<input id="title" type="text" class="form-control input-sm" ng-model="vc.title">
