--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -1,9 +1,13 @@
-<section class='panel panel-default'>
-	<div class="block-content no-lower-margin">
-		<show-filter x-toggle-filter="toggleFilter" class="pull-right"></show-filter>
-		<h3 ng-show="environment === 'EAO' && title !== 'no'">Environmental Assessments</h3>
-		<h3 ng-show="environment === 'MEM' && title !== 'no'">Mining Projects</h3>
+<section class="panel panel-default">
+	
+	<div class="panel-heading clearfix">
+		<h2 class="pull-left" ng-show="environment === 'EAO' && title !== 'no'">Environmental Assessments</h2>
+		<h2 class="pull-left" ng-show="environment === 'MEM' && title !== 'no'">Mining Projects</h2>
+		<div class="pull-right">
+			<show-filter x-toggle-filter="toggleFilter"></show-filter>
+		</div>
 	</div>
+	
 	<table x-show-filter="toggleFilter" ng-table="projectList.tableParams" class="table table-condensed table-striped">
 		<tr ng-repeat="o in $data" class='clickable' ui-sref="p.detail({projectid: o.code})">
 			<td data-title="'Name'"
