--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -1,23 +1,29 @@
-<section class="panel panel-default" ng-repeat="activity in recentActs" ng-class="{'watermark-chat': activity.type === 'Public Comment Period', 'watermark-news': activity.type === 'News'}">
-	<div class='panel-body news-headline clickable small' ui-sref="p.detail({projectid: projectlookup[activity.project].code })">
-		<h5>{{ activity.headline }}</h5>
-		<p class="news-content">{{ activity.content | maxWords:30:activity.showmore }}</p>
-		<p ng-if="(activity.content | wordCount) > 30" class="news-more">
-			<a href ng-click="$event.stopPropagation(); activity.showmore = !activity.showmore">
-				<span ng-show="!activity.showmore"><em>More ({{ activity.content | wordCount }} words)</em></span>
-				<span ng-show="activity.showmore"><em>Less</em></span>
-			</a>
-		</p>
-		<p><em>{{ activity.dateAdded | date }} &bullet; {{ activity.type }}</em></p>
-	</div>
-</section>
-<section class="panel panel-default" ng-show="!recentActs || recentActs.length === 0">
-	<div class='panel-body'>
-		<h3 class="no-lower-margin">News and Notices</h3>
-		<p>Please check back here for recent activity notices.</p>
-	</div>
-</section>
-<a href class="btn show-news" ng-show="recentActs && recentActs.length !== 0" ng-click="form.expandnews = !form.expandnews">
-	<span ng-show="!form.expandnews">Show All News</span>
-	<span ng-show="form.expandnews">Minimize News</span>
-</a>
+<div class="recent-activity-view">
+	
+	<section ng-repeat="activity in recentActs">
+		<div class='news-headline clickable' ui-sref="p.detail({projectid: projectlookup[activity.project].code })">
+			<h4>{{ activity.headline }}</h4>
+			<p class="news-content">{{ activity.content | maxWords:30:activity.showmore }}</p>
+			<p ng-if="(activity.content | wordCount) > 30" class="news-more">
+				<a href ng-click="$event.stopPropagation(); activity.showmore = !activity.showmore">
+					<span ng-show="!activity.showmore"><em>More ({{ activity.content | wordCount }} words)</em></span>
+					<span ng-show="activity.showmore"><em>Less</em></span>
+				</a>
+			</p>
+			<p><em>{{ activity.dateAdded | date }} &bullet; {{ activity.type }}</em></p>
+			<hr>
+		</div>
+	</section>
+
+	<section class="panel panel-default hidden" ng-show="!recentActs || recentActs.length === 0">
+		<div>
+			<h3 class="no-lower-margin">News and Notices</h3>
+			<p>Please check back here for recent activity notices.</p>
+		</div>
+	</section>
+	<a href class="btn show-news" ng-show="recentActs && recentActs.length !== 0" ng-click="form.expandnews = !form.expandnews">
+		<span ng-show="!form.expandnews">Show All News</span>
+		<span ng-show="form.expandnews">Minimize News</span>
+	</a>
+	
+</div>
