--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -65,10 +65,6 @@ $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-s
 	border: 0;
 }
 
-.input-group .form-control {
-	height: auto;
-}
-
 .btn-list .btn {
 	margin: 0 2px 4px;
 	display: inline-block;
@@ -1702,9 +1698,20 @@ section {
 /* MODAL OVERRIDES
 ------------------------------ */ 
 .modal-header,
-.modal-body,
 .modal-footer {
-	padding: 1rem 2rem;
+	padding: 1.5rem 2rem;
+}
+
+.modal-header {
+	h3 {
+		font-weight: bold;
+	}
+	
+	.close {
+		margin-right: -1rem;
+		width: 3.4rem;
+		padding: 0.7rem;
+	}
 }
 
 .modal-footer {
@@ -1713,6 +1720,10 @@ section {
 	.btn {
 		min-width: 8rem;
 	}
+}
+
+.modal-body {
+	padding: 2rem;
 }
 
 
@@ -2265,7 +2276,7 @@ section.project-info {
 	}
 	
 	td {
-		padding: 1rem !important;
+		padding: 0.5rem 1rem !important;
 		vertical-align: middle !important;
 	}
 	
@@ -2281,4 +2292,32 @@ section.project-info {
 			padding: 0.6rem;
 		}
 	}
+}
+
+
+/* MILESTONE/COMMENT SESSION MODAL VIEW
+------------------------------ */
+.add-milestone-dialog,
+.add-comment-dialog {
+	.form-group {
+		margin-bottom: 2rem;
+	}
+	
+	.form-group:last-child {
+		margin-bottom: 0;
+	}
+}
+
+
+/* DATE RANGE CONTROL
+------------------------------ */
+.date-range-control {
+	.spacer {
+		padding: 0 1rem;
+		line-height: 3.4rem;
+	}
+}
+
+.input-group.date-range {
+	width: 10rem;
 }
