--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -17,8 +17,8 @@
 				<div id="phaseCollapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="phaseCollapseOne">
 					<div class="panel-body">
 						<div class="button-bar">
-							<button class="btn btn-default">Add Milestone</button>
-							<button class="btn btn-default">Add Comment Period</button>
+							<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#addMilestoneModal">Add Milestone</button>
+							<button class="btn btn-default btn-sm" data-toggle="modal" data-target="#addCommentSessionModal">Add Comment Period</button>
 						</div>
 						<table class="table project-milestones-comments">
 							
@@ -33,7 +33,7 @@
 										<span class="glyphicon glyphicon-pencil"></span>
 									</button>
 									<button class="btn btn-link">
-										<span class="glyphicon  glyphicon-trash"></span>
+										<span class="glyphicon glyphicon-trash"></span>
 									</button>
 								</td>
 							</tr>
@@ -65,7 +65,7 @@
 							</tr>
 						</table>
 						<div class="button-bar bottom">
-							<button class="btn btn-default" disabled="disabled">Phase Completed</button>
+							<button class="btn btn-default btn-sm" disabled="disabled">Phase Completed</button>
 						</div>
 					</div>
 				</div>
@@ -77,3 +77,115 @@
 	</div>
 
 </div>
+
+
+<!-- ADD MILESTONE MODAL -->
+<div class="modal fade" id="addMilestoneModal" role="dialog" tabindex="-1">
+	<div class="modal-dialog add-milestone-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h3 class="modal-title">Add Milestone</h3>
+			</div>
+			<div class="modal-body">
+				<div class="form-group">
+					<label>Select a Milestone</label>
+					<select class="form-control">
+						<option selected="selected">---</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label>Date Range / Effective Date?</label>
+					<div class="date-range-control clearfix">
+						<div class="date-range input-group pull-left">
+							<span class="input-group-btn">
+								<button class="btn btn-default">
+									<span class="glyphicon glyphicon-calendar"></span>
+								</button>
+							</span>
+							<input class="form-control" type="date" />
+						</div>
+						<div class="pull-left spacer">-</div>
+						<div class="date-range input-group pull-left">
+							<span class="input-group-btn">
+								<button class="btn btn-default">
+									<span class="glyphicon glyphicon-calendar"></span>
+								</button>
+							</span>
+							<input class="form-control" type="date" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-primary">Add Milestone</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!-- ADD COMMENT SESSION MODAL -->
+<div class="modal fade" id="addCommentSessionModal" role="dialog" tabindex="-1">
+	<div class="modal-dialog add-comment-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="btn btn-default close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<h3 class="modal-title">Add Comment Session</h3>
+			</div>
+			<div class="modal-body">
+				<div class="form-group">
+					<label>Comment Session Role</label>
+					<div class="dropdown">
+						<button class="btn btn-default dropdown-toggle" id="commentSessionMenu" data-toggle="dropdown" aria-expanded="false">
+							Select Comment Session Role &nbsp;&nbsp;<span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu" aria-labelledby="commentSessionMenu">
+							<li>
+								<a href="#">Public Comment Session</a>
+							</li>
+							<li>
+								<a href="#">Working Group Comment Session</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<div class="form-group">
+					<label>Comment Session Name</label>
+					<input type="text" class="form-control"/>
+				</div>
+				<div class="form-group">
+					<label>Date Range</label>
+					<div class="date-range-control clearfix">
+						<div class="date-range input-group pull-left">
+							<span class="input-group-btn">
+								<button class="btn btn-default">
+									<span class="glyphicon glyphicon-calendar"></span>
+								</button>
+							</span>
+							<input class="form-control" type="date" />
+						</div>
+						<div class="pull-left spacer">-</div>
+						<div class="date-range input-group pull-left">
+							<span class="input-group-btn">
+								<button class="btn btn-default">
+									<span class="glyphicon glyphicon-calendar"></span>
+								</button>
+							</span>
+							<input class="form-control" type="date" />
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-primary">Add Comment Session</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dialog --
+</div><!-- /.modal -->
